# gstpeaq

./: .gitignore  .travis.yml  AUTHORS  INSTALL  INSTALL.OSX  INSTALL.Windows  Makefile.am  NEWS  README  autogen.sh  configure.ac  earmodel.c  earmodel.h  earmodel_bands.h  fft.c  fft.h  gstpeaq  gstpeaq.c  gstpeaq.h  gstpeaqplugin.c  gtk-doc.make  leveladapter.c  leveladapter.h  makeChangeLog.sh  modpatt.c  modpatt.h  runtest.sh  testpeaq.c
.github/workflows/: ci.yml
aux/: svn2log.py
doc/: .gitignore  Makefile.am  conformance.xml  conformance_advanced_table.xml  conformance_basic_table.xml  gstpeaq-docs.sgml  gstpeaq-sections.txt  gstpeaq.types  gtk-doc.xsl  make_conformance_tables.sh  references.xml
doc/man/: .gitignore  Makefile.am  peaq.1  peaq.xml
m4/: gst-plugindir.m4
misc/: users
src/: .gitignore  Makefile.am  checkconformanceresults.sh  conformancetest.sh  earmodel.c  earmodel.cc  earmodel.h  earmodel_bands.h  fbearmodel.c  fbearmodel.cc  fbearmodel.h  fftearmodel.c  fftearmodel.cc  fftearmodel.h  gstpeaq.c  gstpeaq.h  gstpeaqplugin.c  leveladapter.c  leveladapter.cc  leveladapter.h  modpatt.c  modpatt.cc  modpatt.h  movaccum.c  movaccum.cc  movaccum.h  movs.c  movs.cc  movs.h  nn.c  nn.cc  nn.h  optimize_settings.hs  peaq.c  peaqalgo.cc  peaqalgo.h  runtest-0.10.sh  runtest-1.0.sh  runtest.sh  settings.h  (+2 more)
vs/: gstpeaq-0.10.sln  gstpeaq-1.0.sln  gstpeaq-1.0.vcxproj  gstpeaq.props  gstpeaq.sln  gstpeaq.vcxproj  peaq-0.10.vcxproj  peaq-1.0.vcxproj  peaq.vcxproj  runtest-win32.ps1  runtest-x64.ps1  testpeaq.vcxproj
xcode/GstPEAQ.xcodeproj/: project.pbxproj
