lib_LTLIBRARIES = libgstpeaq.la
check_PROGRAMS = testpeaq
TESTS = testpeaq
noinst_HEADERS = fft.h gstpeaq.h earmodel.h 
libgstpeaq_la_SOURCES = fft.c gstpeaq.c gstpeaqplugin.c earmodel.c 
libgstpeaq_la_CFLAGS = @PKGCONF_CFLAGS@
libgstpeaq_la_LIBADD = @PKGCONF_LIBS@
testpeaq_SOURCES = testpeaq.c fft.c earmodel.c 
testpeaq_CFLAGS = @PKGCONF_CFLAGS@
testpeaq_LDADD = @PKGCONF_LIBS@
